* Popup dictionary (https://play.google.com/store/apps/details?id=com.barisatamer.popupdictionary) integration
* Catalan localization (by Alfonso Montero)
* Open 'additional links in network library' with correct orientation
* Some incorrect FB2 files support (li/i/b tags, href attributes with no namespace and with unknown namespace ids) -- e.g. CoolReader manual

===== 1.6.9 (Jan 03, 2013) =====
* Added Bulgarian translation (by Ники Арсов)
* Updated Dutch translation (by Frank Fesevur)
* Plural forms in Belarusian and Czech translations
* Fixed issue with rendering during backward page turning with no amimation
* xlarge screens support declared in AndroidManifest.xml
* ePub: fixed svg namespace processing
* main activity orientation is used in all dependent activities

===== 1.6.8 (Nov 30, 2012) =====
* Fixed NPE during adding a custom catalog with no search link

===== 1.6.7 (Nov 29, 2012) =====
* Android 4.*: show status bar if action bar is shown
* Bulgarian hyphenation patterns, converted by Kaloyan Raev
* OPDS: fixed opensearch description support

===== 1.6.6 (Nov 13, 2012) =====
* Fixed 'extra paragraph break after each footnote mark' issue for RTFs (and may be some other formats)
* Fixed <pre>formatted text rendering
* Fixed utf-8 *.txt files processing
* Fixed library crash on some *.doc files
* Updated Spanish localization (by Francisco Alvarado)

===== 1.6.5 (Nov 04, 2012) =====
* Fixed footnotes processing in rtf's
* Updated Czech localization (by Marek Pavelka)
* Added Belarusian localization (by Uievaład Čorny)

===== 1.6.4 (Oct 30, 2012) =====
* Supported encoding & language detection for *.doc (ms-word) files
* Fixed crash in book info dialogs on some epubs (on Jelly Bean devices), code taken from https://gist.github.com/3424004
* Fixed some problems in interaction with TTS+ plugin (by Greg Kochaniak)

===== 1.6.3 (Oct 22, 2012) =====
* FBReader stores text position after setPageStart API method (useful for TTS plugin, code by Greg Kochaniak)